--- a/GameServer/GameServer/GameServer.csproj
+++ b/GameServer/GameServer/GameServer.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="UpdateManager.cs" />
+    <Compile Include="Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
